--- a/main.css
+++ b/main.css
@@ -101,6 +101,10 @@ h4{
     box-shadow: var(--shadow);
 }
 
+.create-todo .options label:hover{
+    opacity: 0.75;
+}
+
 input[type="radio"], 
 input[type="checkbox"]{
     display: none;
@@ -139,9 +143,97 @@ input[type="checkbox"]{
     box-shadow: var(--personal-glow);
 }
 
+.bubble:hover{
+    opacity: 0.75;
+}
+
 input:checked ~ .bubble::after {
     width: 10px;
     height: 10px;
     opacity: 1;
 }
 
+.create-todo .options label div{
+    color: var(--dark);
+    font-size: 1.125rem;
+    margin-top: 1rem;
+}
+
+
+.create-todo input[type="submit"]{
+    display: block;
+    width: 100%;
+    font-size: 1.125rem;
+    padding: 1rem 1.5rem;
+    color: #fff;
+    background-color: var(--primary);
+    border-radius: 0.5rem;
+    box-shadow: var(--personal-glow);
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+.create-todo input[type="submit"]:hover{
+    opacity: 0.75;
+}
+
+.todo-list .list{
+    margin: 1rem 0;
+}
+
+.todo-list .todo-item {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    box-shadow: var(--shadow);
+    margin-bottom: 1rem;
+}
+
+.todo-item label {
+    display: block;
+    margin-right: 1rem;
+    cursor: pointer;
+}
+
+.todo-item .todo-content {
+    flex: 1 1 0%
+}
+
+.todo-item .todo-content input {
+    color: var(--dark);
+    font-size: 1.125rem;
+}
+
+.todo-item .actions {
+    display: flex;
+    align-items: center;
+}
+
+.todo-item .actions button{
+    display: block;
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+    color: #fff;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+.todo-item .actions button:hover{
+    opacity: 0.75;
+}
+
+.todo-item .actions .edit{
+    margin-right: 0.5rem;
+    background-color: var(--primary);
+}
+
+.todo-item .actions .delete{
+    margin-right: 0.1rem;
+    background-color: var(--danger);
+}
+
+.todo-item.done .todo-content input{
+    text-decoration: line-through;
+    color: var(--grey);
+}
